--- a/styles/style.css
+++ b/styles/style.css
@@ -5,29 +5,33 @@
 }
 
 .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
+    background-color: burlywood;
 }
 
-.container>.row>div {
-    /* padding: 100px 0; */
+.row {
+    margin: -10px;
+}
+
+.card {
+    padding: 10px;
     height: 250px;
     background-color: rgb(241, 185, 213);
-    border: 1px solid;
 
     text-align: center;
-    line-height: 250px;
 }
 
-
-.container>.row>[class*="col-"]>.row {
+[class*="col-"] {
     padding: 10px;
-    height: 100%;
+    border: 1px solid;
+
 }
 
-.container>.row>[class*="col-"]>.row>[class*="col-"] {
-    height: 100%;
-    border: 1px solid white;
+.row .row .card {
+    /* height: 100%; */
     background-color: rgb(214, 100, 134);
+    border: 1px solid white;
+
+}
+
+.row .row [class*="col-"] {
 }
