--- a/styles/12bool.css
+++ b/styles/12bool.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
 [class*="col-"] {
     float: left;
 }
@@ -7,6 +20,7 @@
     display: table;
     clear: both;
 }
+
 
 /* ---- COLUMS ---- */
 
