--- a/styles/12bool.css
+++ b/styles/12bool.css
@@ -1,10 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    position: relative;
-}
-
 .container {
     width: 100%;
     max-width: 1200px;
@@ -13,6 +6,7 @@
 
 [class*="col-"] {
     float: left;
+    padding: 0 5px;
 }
 
 .row::after {
